# notify-to-cisco-webex

./: .env.example  LICENSE  README.md  README_ja.md  pyproject.toml  taskfile.yml
assets/: icon.icns
notify_to_cisco_webex/: __init__.py  __main__.py  notify_to_cisco_webex.py
tests/: test_attachments.py  test_create_file_from_bytes.py  test_create_file_from_path.py  test_create_file_from_url.py  test_notify.py
